# market-platform

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: architecture.md  configuration.md  data_providers.md  development.md  indicators.md  roadmap.md  smoke.md
docs/adr/: 0001-provider-registry.md  0002-twelve-data-provider.md  0003-provider-comparison.md
docs/benchmarks/: v0.43.0-replay-performance-attribution.md  v0.44.0-price-structure-replay-precompute.md  v0.45.0-structure-touch-observation-optimization.md  v0.46.0-historical-observation-construction-attribution.md
docs/handoffs/: v0.42.1-replay-foundation-handoff.md  v0.43.0-replay-performance-attribution-handoff.md  v0.44.0-price-structure-replay-precompute-handoff.md  v0.45.0-structure-touch-observation-optimization-handoff.md  v0.46.0-historical-observation-construction-attribution-handoff.md
scripts/: benchmark_replay.py  dev_check.py  seed_cache.py  smoke_twelve_data.ps1
src/market_platform/: __init__.py
tests/integration/: test_polygon_provider.py  test_real_provider_smoke.py  test_twelve_data_provider.py
tests/unit/: conftest.py  test_baseline_market_state_model.py  test_baseline_trend_strategy.py  test_baseline_volatility_strategy.py  test_cli.py  test_cli_provider_health.py  test_cli_providers.py  test_cli_replay.py  test_cli_research.py  test_cli_signal_classification.py  test_composite_signal.py  test_config.py  test_data_cache.py  test_data_capabilities.py  test_data_comparison.py  test_data_diagnostics.py  test_data_health.py  test_data_models.py  test_http_client.py  (+51 more)
(+110 files in other folders)
